# OPN

./: .dockerignore
.github/workflows/: chaos.yml  ci.yml  contracts-publish.yml  nightly-verify.yml  perf-smoke.yml
archive/opn-web-conference/: .dockerignore  .env.example  docker-compose.deploy.yml  package-lock.json  tsconfig.base.json
archive/opn-web-conference/app/: index.html  package.json
archive/opn-web-conference/dev-auth/: bot.mjs  package.json
archive/opn-web-conference/docs/: deploy-coolify.md
docs/: OPN-CORE.md  OPN.md  beta-release-findings.md  contracts-semver.md  opn-bridge-exchange.md  opn-core-capabilities.md  opn-core-roadmap-reflections.md  opn-core-roadmap.md  opn-fivem-template-roadmap.md  opn-group-calls.md  opn-panel-roadmap.md  opn-web-template-roadmap.md  releasing.md  restrictions.md
docs/runbooks/: deploy-rollback.md  frozen-account.md  incident-triage.md  jwt-rotation.md  livekit-degraded.md  panel-admin.md  replica-2-scale-up.md  restore-from-backup.md  security-pass.md
opn-core/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.dev.yml  docker-compose.perf.yml  docker-compose.prod.yml  justfile
opn-core/chaos/: kill9-mid-send.sh  lib.sh  link-drop.sh  livekit-down.sh  pg-restart.sh  redis-restart.sh
opn-core/crates/contracts/: .npmignore  Cargo.toml  package.json
opn-core/crates/contracts/bindings/: CallParticipantState.ts  CallSessionState.ts  ChannelMember.ts  ChannelSummary.ts  CharacterInfo.ts  ClientFrame.ts  Cmd.ts  CommentItem.ts  ContactItem.ts  DeviceInfo.ts  Evt.ts  InboxItem.ts  ListingItem.ts  PostItem.ts  ReactionItem.ts  ServerMsg.ts  SessionMintResponse.ts  Topology.ts  TransferItem.ts  UploadTarget.ts
opn-core/crates/contracts/src/: cmd.rs  envelope.rs  error.rs  evt.rs  lib.rs  types.rs
opn-core/crates/contracts/tests/: wire.rs
opn-core/crates/core/: Cargo.toml
opn-core/crates/core/migrations/: 0001_roles_and_rls_groundwork.sql  0002_rls_canary.sql  0003_identity.sql  0004_notify.sql  0005_channels.sql  0006_reactions_pins.sql  0007_media.sql  0008_directory.sql  0009_calls.sql  0010_ledger.sql  0011_exchange.sql  0012_feed.sql  0013_admin_audit.sql  0014_group_calls.sql  0015_tenant_freeze.sql  0016_admin_credential.sql  0017_servers.sql
opn-core/crates/core/src/: admin.rs  config.rs  janitor.rs  lib.rs  listener.rs  main.rs  observe.rs  state.rs
opn-core/crates/core/src/gateway/: dispatch.rs  fanout.rs  link.rs  mod.rs  presence.rs  registry.rs  topic.rs  ws.rs
opn-core/crates/core/src/http/: admin.rs  auth.rs  channels.rs  exchange.rs  feed.rs  ledger.rs  livekit.rs  media.rs  mod.rs  notify.rs  tenant.rs
opn-core/crates/core/src/infra/: auth.rs  cursor.rs  db.rs  ids.rs  mod.rs  ratelimit.rs  s3.rs  tenant_cache.rs  timefmt.rs
opn-core/crates/core/src/primitives/: identity.rs  media.rs  mod.rs  notify.rs  servers.rs
opn-core/crates/core/src/primitives/calls/: fsm.rs  group.rs  mod.rs  store.rs
opn-core/crates/core/src/primitives/channels/: mod.rs  store.rs
opn-core/crates/core/src/primitives/directory/: mod.rs
opn-core/crates/core/src/primitives/feed/: mod.rs  read.rs
opn-core/crates/core/src/primitives/ledger/: exchange.rs  fsm.rs  mod.rs  store.rs
opn-core/crates/core/tests/: admin_mutations.rs  calls.rs  channels.rs  channels_history.rs  channels_members_resume.rs  channels_reactions_pins.rs  channels_receipts.rs  channels_seq.rs  config_env.rs  coverage.rs  directory.rs  exchange.rs  fanout.rs  feed.rs  feed_read.rs  group_calls.rs  healthz.rs  identity.rs  identity_http.rs  idle_soak.rs  janitor.rs  ledger.rs  link.rs  media.rs  notify.rs  prop_channels.rs  prop_cursor.rs  prop_fsm.rs  prop_ledger.rs  rls_audit.rs  rls_canary.rs  servers.rs  ws.rs
opn-core/crates/core/tests/common/: mod.rs  ws.rs
opn-core/crates/loadgen/: Cargo.toml
opn-core/crates/loadgen/scenarios/: call-churn.json  chaos-kill9.json  chaos-pg.json  design.json  hot-channel.json  reconnect-storm.json  smoke.json  soak-short.json  soak10x.json
opn-core/crates/loadgen/src/: callchurn.rs  driver.rs  groupprobe.rs  http.rs  linkdrop.rs  main.rs  verify.rs  xinstance.rs
opn-core/deploy/backup/: lib.sh  media-mirror.sh  pg-backup.sh  pg-restore.sh  restore-drill.sh
opn-core/deploy/postgres/initdb/: 10-app-role-password.sh
opn-core/deploy/prometheus/: README.md  alerts.yml
opn-core/fuzz/: .gitignore  Cargo.toml
opn-core/fuzz/corpus/fuzz_client_frame/: auth_refresh.json  channels_send.json  feed_post.json  sub_ch.json  sub_feed.json  unsub_presence.json
opn-core/fuzz/corpus/fuzz_cursor_decode/: valid.txt
opn-core/fuzz/corpus/fuzz_link_hello/: hello.json
opn-core/fuzz/fuzz_targets/: fuzz_client_frame.rs  fuzz_cursor_decode.rs  fuzz_link_hello.rs
opn-core/perf/results/: 2026-07-20-design.json  README.md
opn-panel/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
opn-panel/src/: App.tsx  api.ts  format.ts  index.css  ui.tsx
opn-panel/tests/: smoke.spec.ts
opn-web/: GUIDE.md  README.md  package-lock.json  package.json  tsconfig.json
opn-web-conference/: .env.example  Dockerfile  README.md  package.json
opn-web-conference/app/: vite.config.ts
opn-web-conference/deploy/: server.mjs
opn-web-conference/dev-auth/: join.mjs  rooms.mjs  server.mjs
opn-web-conference/docs/: deploy-coolify.md
opn-web-conference/scripts/: smoke-w1.mjs  smoke-w2.mjs  sync-contracts.mjs
opn-web/example/: index.html  main.ts
opn-web/src/: http.ts  index.ts  socket.test.ts  socket.ts  types.ts
references/: EXAMPLE.excalidraw  lb-phone-architecture.excalidraw
(+17 files in other folders)
