[package]
name = "contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
ts-rs.workspace = true

[lints]
workspace = true

[[bin]]
name = "export_ts"
path = "bin/export_ts.rs"
