[package]
name = "opn-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
contracts = { path = "../contracts" }
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
redis = { version = "1.4.1", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate", "json", "macros"] }
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
url = "2.5.8"
