[package]
name = "opn-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
dashmap = "6"
futures-util = "0.3"
jsonwebtoken = "9"
rand = "0.9"
sha2 = "0.10"
contracts = { path = "../contracts" }
hex = "0.4"
hmac = "0.12"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
redis = { version = "1.4.1", default-features = false, features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
smallvec = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate", "json", "macros"] }
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"] }
tokio-tungstenite = "0.28"
tower = { version = "0.5.3", features = ["util"] }
url = "2.5.8"
