[package]
name = "opn-loadgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "opn-loadgen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
contracts = { path = "../contracts" }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
tokio-tungstenite = "0.28"
uuid.workspace = true

[lints]
workspace = true
